--- a/languages/es.json
+++ b/languages/es.json
@@ -12,7 +12,7 @@
 	"pd-admin-005": "No tienes ningún tema compatible con Paw Designer",
 	"pd-admin-006": "Temas no soportados",
 	"pd-admin-007": "Los siguientes temas requieren que actualices Paw Designer",
-	"pd-admin-008": "Temas no disponibles",
+	"pd-admin-008": "Temas no compatibles",
 	"pd-admin-009": "Los siguientes temas no soportan Paw Designer!",
 	"pd-admin-010": "Tema no encontrado",
 	"pd-admin-011": "Ese tema no existe!",
