--- a/languages/es.json
+++ b/languages/es.json
@@ -50,7 +50,7 @@
 	"pd-admin-043": "E$ste tema no ofrece menús!",
 	"pd-admin-044": "Característica en desarrollo. Espere a próximas actualizaciones!",
 	"pd-admin-045": "Cargar",
-	"pd-admin-046": "Seleccione imágenes para cargar",
+	"pd-admin-046": "Seleccione una imagen para subir",
 	"pd-admin-047": "Menú URL o Slug",
 	"pd-admin-048": "Borrar elemento del menú",
 
