--- a/languages/es.json
+++ b/languages/es.json
@@ -9,7 +9,7 @@
 	"pd-admin-002": "Activado",
 	"pd-admin-003": "Activar",
 	"pd-admin-004": "Temas soportados",
-	"pd-admin-005": "No tienes ningún tema compatible con Paw Designer",
+	"pd-admin-005": "No hay temas compatibles con Paw Designer",
 	"pd-admin-006": "Temas no soportados",
 	"pd-admin-007": "Los siguientes temas requieren que actualices Paw Designer",
 	"pd-admin-008": "Temas no compatibles",
@@ -25,8 +25,8 @@
 	"pd-admin-018": "Última actualización",
 	"pd-admin-019": "Desconocido",
 	"pd-admin-020": "Autor del tema",
-	"pd-admin-021": "Correo Electrónico",
-	"pd-admin-022": "Sitio Web",
+	"pd-admin-021": "Correo",
+	"pd-admin-022": "Web",
 	"pd-admin-023": "Licencia del tema",
 	"pd-admin-024": "Compatibilidad del tema",
 	"pd-admin-025": "Descripción del tema",
@@ -38,18 +38,18 @@
 	"pd-admin-031": "Actualizar menú",
 	"pd-admin-032": "Páginas",
 	"pd-admin-033": "Título de Menú",
-	"pd-admin-034": "Manténgalo vacío para usar el nombre original de la página.",
+	"pd-admin-034": "Mantener vacío para usar el nombre original de la página.",
 	"pd-admin-035": "Seleccionar página",
-	"pd-admin-036": "Comienza a escribir...",
+	"pd-admin-036": "Escriba para buscar",
 	"pd-admin-037": "Añadir elementos al menú",
 	"pd-admin-038": "Categorías",
-	"pd-admin-039": "Manténgalo vacío para usar el nombre original de la categoría.",
+	"pd-admin-039": "Manténer vacío para usar el nombre original de la categoría.",
 	"pd-admin-040": "Selecionar enlace",
 	"pd-admin-041": "Enlaces personalizados",
 	"pd-admin-042": "Menú URL",
-	"pd-admin-043": "E$ste tema no ofrece menús!",
+	"pd-admin-043": "Este tema no ofrece menús!",
 	"pd-admin-044": "Característica en desarrollo. Espere a próximas actualizaciones!",
-	"pd-admin-045": "Cargar",
+	"pd-admin-045": "Subir",
 	"pd-admin-046": "Seleccione una imagen para subir",
 	"pd-admin-047": "Menú URL o Slug",
 	"pd-admin-048": "Borrar elemento del menú",
@@ -58,7 +58,7 @@
 	"pd-plugin-002": "Elemento de menú inválido o incompleto!",
 	"pd-plugin-003": "OPS!!! Error desconocido!",
 	"pd-plugin-004": "El elemento de menú ha sido creado correctamente!",
-	"pd-plugin-005": "Ación inválida o incompleta!",
+	"pd-plugin-005": "Acción inválida o incompleta!",
 	"pd-plugin-006": "La configuración se a guardado con éxito!",
 	"pd-plugin-007": "El menú se ha guardado con éxito!"
 }
